--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -1,12 +1,12 @@
 .card {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-  flex-wrap: wrap;
-  /* background-color: white; */
   padding: 16px;
   border-radius: 4px;
+  background-color: var(--details);
   box-shadow: 0 0 4px rgba(0,0,0,0.3);
 }
 
@@ -15,7 +15,7 @@
   justify-content: space-between;
   align-items: center;
   font-size: 1.2em;
-  margin-right: 12px;
+  margin: 0;
 }
 
 .card__text {
